# HackMoscow

./: .gitignore  CMakeLists.txt  README.md  add_lib.sh  make.sh  player_gui_win.pro  run.sh
alsa/: alsa_cap.cpp
arduino/listener/: CMakeLists.txt  listener.ino
arduino/listener/cmake/: ArduinoToolchain.cmake
arduino/talker/: talker.ino
arduino_lib/: arduino_serial.cpp
basswasapi/: basswasapi.txt
basswasapi/c/: basswasapi.dsw  basswasapi.sln  makefile  makefile.in
basswasapi/c/contest/: contest.dsp  contest.vcproj
basswasapi/c/list/: list.c  list.dsp
basswasapi/c/livefx/: livefx.c  livefx.dsp  livefx.rc  livefx.vcproj  makefile
basswasapi/c/livespec/: livespec.c  livespec.dsp  livespec.vcproj
basswasapi/c/rectest/: makefile  rectest.c  rectest.dsp  rectest.rc  rectest.vcproj
basswasapi/c/speakers/: speakers.c  speakers.dsp  speakers.rc  speakers.vcproj
basswasapi/c/synth/: synth.c  synth.dsp  synth.vcproj
basswasapi/delphi/: basswasapi.pas
basswasapi/vb/: basswasapi.bas
basswasapi/vb/RecTest/: frmRecTest.frm  modRecTest.bas  prjRecTest.vbp
demon/: CMakeLists.txt
demon/include/: daemon.h  demon.h
demon/src/: daemon.c  demon.c  main.c
include/: arduino_serial.h  pulse_utils.h
led_lib/: CMakeLists.txt  README.txt  test_for_lib.cpp
lib/: bass.h  fixed_queue.h
lib/LED/: LED.cpp  LED.h
lib/alsa_cap/: capture.cpp  capture.h
lib/player/: msg.cpp  msg.h  player.cpp  player.h  polygon.cpp  polygon.h  rgbparameters.cpp  rgbparameters.h
lib/pulse_capture/: capture.cpp  capture.h
lib/pulse_device/: example_usage.cpp  list_devices.cpp  list_devices.h
lib/rpi_ws281x/: .sconsign.dblite  linux.py  test  version.py
lib/rpi_ws281x/golang/ws2811/: ws2811.go.h
lib/rpi_ws281x/python/: ez_setup.py  neopixel.py  rpi_ws281x.i  setup.py
lib/rpi_ws281x/python/examples/: SK6812_lowlevel.py  SK6812_strandtest.py  SK6812_white_test.py  lightpaint.py  lowlevel.py  multistrandtest.py  neopixelclock.py  strandtest.py
lib/serial/: serial.cpp
lib/uart/: uart.cpp  uart.h
lib/windcapture/: capture.cpp  capture.h  capture.h~RF5dac81c.TMP
player/: .gitignore  CMakeLists.txt  do.sh  run.sh
player/include/: arduino_serial.h  dirutils.h  player.h  visualizer.h
player/lib/player/: player.cpp  player.h
player/lib/pulse_capture/: capture.cpp  capture.h
player/lib/pulse_device/: list_devices.h
player/src/: arduino_serial.cpp  dirutils.cpp  main.cpp  player.cpp  visualizer.cpp
player_console/: CMakeLists.txt  main.cpp
player_ui/: CMakeLists.txt  animation.cpp  animation.h  animation.ui  animation_view.h  animation_view.ui  animationpresettings.cpp  animationpresettings.h  animationpresettings.ui  audio_thread.cpp  audio_thread.h  color.cpp  color.h  color.ui  device_interface.cpp  device_interface.h  devices.cpp  devices.h  devices.ui  fft_thread.cpp  fft_thread.h  fixed_queue.h  main.cpp  main_window.cpp  main_window.h  main_window.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  player_threads.cpp  player_threads.h  polygon.cpp  polygon.h  presets.cpp  presets.h  presets.ui  savenewdial.cpp  savenewdial.h  savenewdial.ui  serial_thread.cpp  (+3 more)
player_ui/animation/: animation.cpp  animation.h  animation.ui  animation_view.cpp  animation_view.h  animationpresettings.cpp  animationpresettings.h  animationpresettings.ui
player_ui/color/: color.cpp  color.ui
player_ui/devices/: devices.cpp  devices.h  devices.ui
player_ui/main_window/: tabbable_main_window.cpp  tabbable_main_window.h  tabbable_main_window.ui
player_ui/polygon/: polygon.cpp  polygon.h
player_ui/presets/: presets.cpp  presets.h  presets.ui
player_ui/styles/: helper.cpp  helper.h
player_ui/thread_workers/: audio_thread.cpp  fft_thread.cpp
pulse/: fourier_processing.cpp  fourier_processing.h  parec.cpp  serial_talker.cpp  serial_talker.h
pulseaudio/etc/pulse/: default.pa
serial_talker/: CMakeLists.txt
serial_talker/src/: arduino_serial.cpp  main.cpp
src/: Makefile  arduino_serial.cpp  main.cpp  parec.cpp  pulse_utils.cpp  test_serial.cpp
test/: Makefile  list_devices.cpp  main.cpp  parec.c  parec.cpp
